underscore as class and id in css should be hyphen.

--- a/_theme/gotgithub/layout.html
+++ b/_theme/gotgithub/layout.html
@@ -21,12 +21,12 @@
 
       <div id='menu'>
         <ul>
-          <li><a href='/' id='home_link' title='Home'>首页</a></li>
-          <li><a href='/blog.html' id='blog_link' title='Blog'>博客</a></li>
-          <li><a href='/doc/' id='docs_link' title='Docs'>文章</a></li>
-          <li><a href='/about.html' id='about_link' title='About'>关于</a></li>
-          <li><a href='http://github.com/gotgit' target='_blank' title='GitHub' rel='me' id='github_link'>GitHub</a></li>
-          <li><a href='http://weibo.com/gotgit' title='微博' target='_blank' id='weibo_link'>微博</a></li>
+          <li><a href='/' id='home-link' title='Home'>首页</a></li>
+          <li><a href='/blog.html' id='blog-link' title='Blog'>博客</a></li>
+          <li><a href='/doc/' id='docs-link' title='Docs'>文章</a></li>
+          <li><a href='/about.html' id='about-link' title='About'>关于</a></li>
+          <li><a href='http://github.com/gotgit' target='_blank' title='GitHub' rel='me' id='github-link'>GitHub</a></li>
+          <li><a href='http://weibo.com/gotgit' title='微博' target='_blank' id='weibo-link'>微博</a></li>
         </ul>
       </div>
     </div>
