Use absolute url for toplevel css.

--- a/_theme/gotgithub/layout.html
+++ b/_theme/gotgithub/layout.html
@@ -13,7 +13,7 @@
 {% block sidebar1 %}{{ sidebar() }}{% endblock %}
 {% block sidebar2 %}{% endblock %}
 
-{% set css_files = css_files + ["/stylesheets/master.css", "/stylesheets/syntax.css", "static/worldhello.css"] %}
+{% set css_files = css_files + ["http://www.worldhello.net/stylesheets/master.css", "http://www.worldhello.net/stylesheets/syntax.css", "static/worldhello.css"] %}
 
 {% block header %}
     <div id='header'>
