wrap lines to 78, long lines are hard to diff.

--- a/01-explore-github/index.html
+++ b/01-explore-github/index.html
@@ -110,9 +110,7 @@
 </div>
 <div class="admonition- admonition seealso">
 <p class="first admonition-title">也可以参考</p>
-<p class="last">本书并非一本介绍Git的书，并且假设读者已经掌握了Git的相关操作。
-如果读者对Git尚不了解，可以参考我写的 《Git权威指南》<a class="footnote-reference" href="#id8" id="id3">[3]</a>一书。此外还可以从网上找到很多免费的、很好的Git资料，
-如：Git社区书<a class="footnote-reference" href="#id9" id="id4">[4]</a>、Pro Git<a class="footnote-reference" href="#id10" id="id5">[5]</a>等。</p>
+<p class="last">本书并非一本介绍Git的书，并且假设读者已经掌握了Git的相关操作。如果读者对Git尚不了解，可以参考我写的 《Git权威指南》<a class="footnote-reference" href="#id8" id="id3">[3]</a>一书。此外还可以从网上找到很多免费的、很好的Git资料，如：Git社区书<a class="footnote-reference" href="#id9" id="id4">[4]</a>、Pro Git<a class="footnote-reference" href="#id10" id="id5">[5]</a>等。</p>
 </div>
 <hr class="docutils" />
 <table class="docutils footnote" frame="void" id="id6" rules="none">
