--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 <col class="field-name" />
 <col class="field-body" />
 <tbody valign="top">
-<tr class="field-odd field"><th class="field-name">Version:</th><td class="field-body">v0.9-3-g8a95fcf-dirty</td>
+<tr class="field-odd field"><th class="field-name">Version:</th><td class="field-body">v0.9-5-gae6877e</td>
 </tr>
 <tr class="field-even field"><th class="field-name">Author:</th><td class="field-body">Jiang Xin</td>
 </tr>
