修改语法，使语句通顺。

--- a/03-project-hosting/010-new-project.html
+++ b/03-project-hosting/010-new-project.html
@@ -233,7 +233,7 @@ $ git commit -m "README for this project."</pre>
 <table class="docutils footnote" frame="void" id="id6" rules="none">
 <colgroup><col class="label" /><col /></colgroup>
 <tbody valign="top">
-<tr><td class="label"><a class="fn-backref" href="#id4">[1]</a></td><td>以扩展名 <tt class="docutils literal"><span class="pre">.md</span></tt>, <tt class="docutils literal"><span class="pre">.mkd</span></tt>,<tt class="docutils literal"><span class="pre">.markdown</span></tt>结尾的文件均Markdown标识语言语法解析并显示。</td></tr>
+<tr><td class="label"><a class="fn-backref" href="#id4">[1]</a></td><td>以扩展名<tt class="docutils literal"><span class="pre">.md</span></tt>，<tt class="docutils literal"><span class="pre">.mkd</span></tt>，<tt class="docutils literal"><span class="pre">.mkdn</span></tt>，<tt class="docutils literal"><span class="pre">.mdown</span></tt>，<tt class="docutils literal"><span class="pre">.markdown</span></tt>等为结尾的文件，均以Markdown标记语言语法进行解析并显示。</td></tr>
 </tbody>
 </table>
 </div>
@@ -267,7 +267,7 @@ $ git commit -m "README for this project."</pre>
       全部内容以 <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/">Creative Commons 署名-非商业性使用-相同方式共享 3.0 协议发布</a>.
       <br />
         &copy; Copyright 2011, 蒋鑫。
-      最后更新于 2011/12/31。
+      最后更新于 2012/01/04。
       使用 <a href="http://sphinx.pocoo.org/">Sphinx</a> 1.1.2 创建。
 
     </div>
