--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 <col class="field-name" />
 <col class="field-body" />
 <tbody valign="top">
-<tr class="field-odd field"><th class="field-name">Version:</th><td class="field-body">v0.9-5-gae6877e</td>
+<tr class="field-odd field"><th class="field-name">Version:</th><td class="field-body">v0.9-6-g0db7370</td>
 </tr>
 <tr class="field-even field"><th class="field-name">Author:</th><td class="field-body">Jiang Xin</td>
 </tr>
@@ -317,7 +317,7 @@
       全部内容以 <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/">Creative Commons 署名-非商业性使用-相同方式共享 3.0 协议发布</a>.
       <br />
         &copy; Copyright 2011, 蒋鑫。
-      最后更新于 2011/12/31。
+      最后更新于 2012/01/04。
       使用 <a href="http://sphinx.pocoo.org/">Sphinx</a> 1.1.2 创建。
 
     </div>
