--- a/06-side-projects/opensource.html
+++ b/06-side-projects/opensource.html
@@ -31,7 +31,7 @@
     <script type="text/javascript" src="../static/translations.js"></script>
     <link rel="top" title="GotGitHub" href="../index.html" />
     <link rel="up" title="6.4. 其他" href="others.html" />
-    <link rel="next" title="7. 附录：轻量级标记语言" href="../appendix/index.html" />
+    <link rel="next" title="7. 附录：轻量级标记语言" href="../appendix/markups.html" />
     <link rel="prev" title="6.4.3. GitHub短网址服务" href="short-url.html" /> 
   </head>
   <body>
@@ -57,7 +57,7 @@
           <a href="../genindex.html" title="总目录"
              accesskey="I">索引</a></li>
         <li class="right" >
-          <a href="../appendix/index.html" title="7. 附录：轻量级标记语言"
+          <a href="../appendix/markups.html" title="7. 附录：轻量级标记语言"
              accesskey="N">下一页</a> |</li>
         <li class="right" >
           <a href="short-url.html" title="6.4.3. GitHub短网址服务"
@@ -94,7 +94,7 @@
   <p class="topless"><a href="short-url.html"
                         title="上一章">6.4.3. GitHub短网址服务</a></p>
   <h4>下一个主题</h4>
-  <p class="topless"><a href="../appendix/index.html"
+  <p class="topless"><a href="../appendix/markups.html"
                         title="下一章">7. 附录：轻量级标记语言</a></p>
   <h3>本页</h3>
   <ul class="this-page-menu">
@@ -260,7 +260,7 @@
           <a href="../genindex.html" title="总目录"
              >索引</a></li>
         <li class="right" >
-          <a href="../appendix/index.html" title="7. 附录：轻量级标记语言"
+          <a href="../appendix/markups.html" title="7. 附录：轻量级标记语言"
              >下一页</a> |</li>
         <li class="right" >
           <a href="short-url.html" title="6.4.3. GitHub短网址服务"
@@ -276,7 +276,7 @@
       全部内容以 <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/">Creative Commons 署名-非商业性使用-相同方式共享 3.0 协议发布</a>.
       <br />
         &copy; Copyright 2011, 蒋鑫。
-      最后更新于 2012/01/06。
+      最后更新于 2012/01/07。
       使用 <a href="http://sphinx.pocoo.org/">Sphinx</a> 1.1.2 创建。
 
     </div>
