add textile and rest markup syntax.

--- a/genindex.html
+++ b/genindex.html
@@ -88,8 +88,19 @@
 <h1 id="index">索引</h1>
 
 <div class="genindex-jumpbox">
+ <a href="#T"><strong>T</strong></a>
  
 </div>
+<h2 id="T">T</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%" valign="top"><dl>
+      
+  <dt><a href="appendix/markups.html#test">test (內置类)</a>
+  </dt>
+
+  </dl></td>
+</tr></table>
+
 
 
           </div>
