--- a/04-work-with-others/020-shared-repo.html
+++ b/04-work-with-others/020-shared-repo.html
@@ -119,17 +119,17 @@
 <p>GitHub可以通过多种途径为版本库授权，让版本库成为多人共享的版本库，从而让项目管理者围绕项目创建一个核心开发团队。下面以gotgithub账号下的helloworld版本库为例，介绍如何设置版本库的多人共享。</p>
 <p>进入<tt class="docutils literal"><span class="pre">gotgithub/helloworld</span></tt>项目的管理界面，点击左侧导航条中的“Collaborators”，可以查看及添加项目的合作者，如图4-17所示。</p>
 <div class="figure">
-<a class="reference internal image-reference" href="../images/collaborators.png"><img alt="../images/collaborators.png" src="../images/collaborators.png" /></a>
+<a class="reference internal image-reference" href="../images/collaborators.png"><img alt="../images/collaborators.png" src="../images/collaborators.png" style="width: 600.0px; height: 199.0px;" /></a>
 <p class="caption">图4-17：添加项目合作者</p>
 </div>
 <p>图4-17为项目添加了两个合作者：supergirl和incredible。添加到项目当中的合作者会收到通知邮件，告知已经被加入到相应的项目当中。当新加入的项目合作者，如incredible，登录GitHub，在仪表板的版本库列表中会看到源自gotgithub用户的版本库，如图4-18所示。</p>
 <div class="figure">
-<a class="reference internal image-reference" href="../images/prj-list-of-collab.png"><img alt="../images/prj-list-of-collab.png" src="../images/prj-list-of-collab.png" /></a>
+<a class="reference internal image-reference" href="../images/prj-list-of-collab.png"><img alt="../images/prj-list-of-collab.png" src="../images/prj-list-of-collab.png" style="width: 405.0px; height: 359.0px;" /></a>
 <p class="caption">图4-18：合作者项目列表</p>
 </div>
 <p>从图4-18可以看出GitHub用户incredible自己创建的项目托管在自己的空间下，而作为合作者参与的项目仍然托管在原创建者（gotgithub）的空间下，这一点明显和派生（Fork）而来的项目不同。图4-19是以incredible登录GitHub访问<tt class="docutils literal"><span class="pre">gotgithub/helloworld</span></tt>的界面。</p>
 <div class="figure">
-<a class="reference internal image-reference" href="../images/collab-view-helloworld.png"><img alt="../images/collab-view-helloworld.png" src="../images/collab-view-helloworld.png" /></a>
+<a class="reference internal image-reference" href="../images/collab-view-helloworld.png"><img alt="../images/collab-view-helloworld.png" src="../images/collab-view-helloworld.png" style="width: 600.0px; height: 249.0px;" /></a>
 <p class="caption">图4-19：以合作者身份访问项目</p>
 </div>
 <p>用户incredible对版本库<tt class="docutils literal"><span class="pre">gotgithub/helloworld</span></tt>拥有写入权限。和<tt class="docutils literal"><span class="pre">gotgithub</span></tt>用户稍有区别的是没有管理员权限。</p>
@@ -156,14 +156,14 @@
 <p>对于像Git这样的分布式版本控制系统，提交总是会成功，这是因为提交并不涉及和共享服务器的交互，是针对本地克隆版本库进行的本地操作。采用集中式的工作模式，共享版本库作为各个用户各自本地版本库数据交换、沟通的中介，只有在本地克隆版本库需要和共享版本库同步的时候才要和服务器建立连接。例如将本地所做的一个或多个提交推送到共享服务器，或者将服务器上新的提交获取到本地克隆版本库。</p>
 <p>实际上无论采用分布式还是集中式的工作模式，Git都好像工作在一个独立的分支上（克隆即分支），即使共享版本库和本地克隆版本库的分支名都叫做<tt class="docutils literal"><span class="pre">master</span></tt>。如图4-20，三个用户克隆<tt class="docutils literal"><span class="pre">gitgithub/helloworld</span></tt>版本库后，各自在本地执行了一次或多次提交。</p>
 <div class="figure">
-<a class="reference internal image-reference" href="../images/workflow-commit.png"><img alt="../images/workflow-commit.png" src="../images/workflow-commit.png" /></a>
+<a class="reference internal image-reference" href="../images/workflow-commit.png"><img alt="../images/workflow-commit.png" src="../images/workflow-commit.png" style="width: 600.0px; height: 317.0px;" /></a>
 <p class="caption">图4-20：在本地版本库中的提交</p>
 </div>
 <p>三个用户各自的提交都会非常顺利，但是一旦决定将本地提交推送到共享服务器时就可能遇到麻烦。用户 gotgithub 先执行推送，会非常顺利。如图4-21所示。</p>
 <div class="highlight-python"><pre>gotgithub$ git push</pre>
 </div>
 <div class="figure">
-<a class="reference internal image-reference" href="../images/workflow-commit-push.png"><img alt="../images/workflow-commit-push.png" src="../images/workflow-commit-push.png" /></a>
+<a class="reference internal image-reference" href="../images/workflow-commit-push.png"><img alt="../images/workflow-commit-push.png" src="../images/workflow-commit-push.png" style="width: 600.0px; height: 348.0px;" /></a>
 <p class="caption">图4-21：用户gotgithub完成推送</p>
 </div>
 <p>而其他人就没有这么幸运了，会报告错误：遇到非快进式推送。Git的推送操作就像SVN等集中式版本控制系统的提交操作那样，先执行者成功，后执行者糟糕（要解决冲突，自动或手动）。</p>
@@ -185,7 +185,7 @@ supergirl$ git merge</pre>
 </div>
 <p>获取和合并操作过程如图4-22所示。</p>
 <div class="figure">
-<a class="reference internal image-reference" href="../images/workflow-fetch-merge.png"><img alt="../images/workflow-fetch-merge.png" src="../images/workflow-fetch-merge.png" /></a>
+<a class="reference internal image-reference" href="../images/workflow-fetch-merge.png"><img alt="../images/workflow-fetch-merge.png" src="../images/workflow-fetch-merge.png" style="width: 600.0px; height: 269.0px;" /></a>
 <p class="caption">图4-22：合并操作示意图</p>
 </div>
 <p>实际上用户supergirl只需执行一条命令便可完成所有的操作：</p>
@@ -201,7 +201,7 @@ supergirl$ git merge</pre>
 </div>
 <p>完成推送后的版本库示意图如图4-23所示。</p>
 <div class="figure">
-<a class="reference internal image-reference" href="../images/workflow-merge-push.png"><img alt="../images/workflow-merge-push.png" src="../images/workflow-merge-push.png" /></a>
+<a class="reference internal image-reference" href="../images/workflow-merge-push.png"><img alt="../images/workflow-merge-push.png" src="../images/workflow-merge-push.png" style="width: 600.0px; height: 348.0px;" /></a>
 <p class="caption">图4-23：完成合并后推送</p>
 </div>
 </div>
@@ -210,7 +210,7 @@ supergirl$ git merge</pre>
 <p>合并并非多个开发者的工作成果融合的唯一选择，有时甚至并非最佳选择。一方面合并会产生除了合并双方（或多方）所有提交外的一个新提交，增加了代码审核的负担，另一方面本地多个提交混杂一起与远程分支合并会更困难。在特定情况下，变基是合并之外的另一个选择。</p>
 <p>图4-24展示用户incredible采用合并和变基两种不同解决方案的操作结果。图中右上是合并操作后的结果，右下是变基操作后的结果。</p>
 <div class="figure">
-<a class="reference internal image-reference" href="../images/workflow-merge-or-rebase.png"><img alt="../images/workflow-merge-or-rebase.png" src="../images/workflow-merge-or-rebase.png" /></a>
+<a class="reference internal image-reference" href="../images/workflow-merge-or-rebase.png"><img alt="../images/workflow-merge-or-rebase.png" src="../images/workflow-merge-or-rebase.png" style="width: 600.0px; height: 231.0px;" /></a>
 <p class="caption">图4-24：合并和变基结果比较</p>
 </div>
 <p>若用户 incredible 选择变基操作，执行命令如下：</p>
@@ -229,7 +229,7 @@ supergirl$ git merge</pre>
 </div>
 <p>推送后的版本库状态如图4-25所示。</p>
 <div class="figure">
-<a class="reference internal image-reference" href="../images/workflow-rebase-push.png"><img alt="../images/workflow-rebase-push.png" src="../images/workflow-rebase-push.png" /></a>
+<a class="reference internal image-reference" href="../images/workflow-rebase-push.png"><img alt="../images/workflow-rebase-push.png" src="../images/workflow-rebase-push.png" style="width: 600.0px; height: 348.0px;" /></a>
 <p class="caption">图4-25：变基后推送</p>
 </div>
 <p>如果希望在执行<tt class="docutils literal"><span class="pre">git</span> <span class="pre">pull</span></tt>时自动使用<tt class="docutils literal"><span class="pre">git</span> <span class="pre">rebase</span></tt>取代默认的<tt class="docutils literal"><span class="pre">git</span> <span class="pre">merge</span></tt>操作，可以在<tt class="docutils literal"><span class="pre">git</span> <span class="pre">pull</span></tt>命令行添加参数<tt class="docutils literal"><span class="pre">--rebase</span></tt>如下：</p>
@@ -272,8 +272,8 @@ supergirl$ git merge</pre>
       全部内容以 <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/">Creative Commons 署名-非商业性使用-相同方式共享 3.0 协议发布</a>.
       <br />
         &copy; Copyright 2011, 蒋鑫。
-      最后更新于 2012/06/08。
-      使用 <a href="http://sphinx.pocoo.org/">Sphinx</a> 1.1.2 创建。
+      最后更新于 2013/10/14。
+      使用 <a href="http://sphinx.pocoo.org/">Sphinx</a> 1.1.3 创建。
 
     </div>
   </body>
