--- a/05-commercial-github/github-enterprise.html
+++ b/05-commercial-github/github-enterprise.html
@@ -108,7 +108,7 @@
 <p>GitHub企业版不像它的前身GitHub:FI<a class="footnote-reference" href="#id4" id="id2">[2]</a>那样通过下载软件包进行安装和部署，而是提供基于虚拟机的解决方案。即GitHub企业版以OVF虚拟机文件格式发布，可以运行在多种虚拟机平台，如：VMWare、VirtualBox、Oracle VM、Red Hat Enterprise Virtualization和IBM POWER。使用OVF格式让GitHub企业版的部署更加轻松。</p>
 <p>GitHub企业版根据用户数量收取年费，入门级的价格为20用户每年5,000美金。如果用户数少，建议采用付费的GitHub托管账号。购买更多用户许可，访问GitHub企业版网站，那儿有一个报价生成器，如图5-10所示。</p>
 <div class="figure">
-<a class="reference internal image-reference" href="../images/github-enterprise-pricing.png"><img alt="../images/github-enterprise-pricing.png" src="../images/github-enterprise-pricing.png" /></a>
+<a class="reference internal image-reference" href="../images/github-enterprise-pricing.png"><img alt="../images/github-enterprise-pricing.png" src="../images/github-enterprise-pricing.png" style="width: 322.0px; height: 407.0px;" /></a>
 <p class="caption">图5-10：GitHub企业版报价生成器</p>
 </div>
 <hr class="docutils" />
@@ -154,8 +154,8 @@
       全部内容以 <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/">Creative Commons 署名-非商业性使用-相同方式共享 3.0 协议发布</a>.
       <br />
         &copy; Copyright 2011, 蒋鑫。
-      最后更新于 2012/06/08。
-      使用 <a href="http://sphinx.pocoo.org/">Sphinx</a> 1.1.2 创建。
+      最后更新于 2013/10/14。
+      使用 <a href="http://sphinx.pocoo.org/">Sphinx</a> 1.1.3 创建。
 
     </div>
   </body>
