--- a/06-side-projects/hub.html
+++ b/06-side-projects/hub.html
@@ -131,7 +131,7 @@ $ hub hub standalone &gt; ~/bin/hub &amp;&amp; chmod 755 ~/bin/hub</pre>
 $ git config --global github.token "your-github-token"</pre>
 </div>
 <p>其中<tt class="docutils literal"><span class="pre">github.token</span></tt>中保存的是用户的API TOKEN，这在“2.1 创建GitHub账号”一节有过介绍。</p>
-<p>在使用<tt class="docutils literal"><span class="pre">hub</span></tt>过程中，如果要为区分哪些命令是<tt class="docutils literal"><span class="pre">git</span></tt>的，哪些是<tt class="docutils literal"><span class="pre">hub</span></tt>的，而不断在两个命令间切换显然太不方便了。``hub`` 命令支持以系统别名<tt class="docutils literal"><span class="pre">git</span></tt>的方式运行，即设置<tt class="docutils literal"><span class="pre">hub</span></tt>的系统别名为<tt class="docutils literal"><span class="pre">git</span></tt>，然后只需执行<tt class="docutils literal"><span class="pre">git</span></tt>命令，这样无论是<tt class="docutils literal"><span class="pre">git</span></tt>本身的命令还是<tt class="docutils literal"><span class="pre">hub</span></tt>扩展的命令都可正常运行。但要注意要用系统提供的别名方式，而不能把<tt class="docutils literal"><span class="pre">hub</span></tt>脚本改名为<tt class="docutils literal"><span class="pre">git</span></tt>，因为<tt class="docutils literal"><span class="pre">hub</span></tt>只是简单地对Git进行封装，运行时仍依赖<tt class="docutils literal"><span class="pre">git</span></tt>命令。在 bash 环境下建立别名可运行如下命令：</p>
+<p>在使用<tt class="docutils literal"><span class="pre">hub</span></tt>过程中，如果要为区分哪些命令是<tt class="docutils literal"><span class="pre">git</span></tt>的，哪些是<tt class="docutils literal"><span class="pre">hub</span></tt>的，而不断在两个命令间切换显然太不方便了。<tt class="docutils literal"><span class="pre">hub</span></tt> 命令支持以系统别名<tt class="docutils literal"><span class="pre">git</span></tt>的方式运行，即设置<tt class="docutils literal"><span class="pre">hub</span></tt>的系统别名为<tt class="docutils literal"><span class="pre">git</span></tt>，然后只需执行<tt class="docutils literal"><span class="pre">git</span></tt>命令，这样无论是<tt class="docutils literal"><span class="pre">git</span></tt>本身的命令还是<tt class="docutils literal"><span class="pre">hub</span></tt>扩展的命令都可正常运行。但要注意要用系统提供的别名方式，而不能把<tt class="docutils literal"><span class="pre">hub</span></tt>脚本改名为<tt class="docutils literal"><span class="pre">git</span></tt>，因为<tt class="docutils literal"><span class="pre">hub</span></tt>只是简单地对Git进行封装，运行时仍依赖<tt class="docutils literal"><span class="pre">git</span></tt>命令。在 bash 环境下建立别名可运行如下命令：</p>
 <div class="highlight-python"><pre>$ alias git=hub</pre>
 </div>
 <p>其他 shell 环境下如何建立系统别名呢？运行<tt class="docutils literal"><span class="pre">hub</span> <span class="pre">alias</span> <span class="pre">&lt;shell&gt;</span></tt>命令查看相关 shell 环境下建立别名的方法。例如对于 csh：</p>
@@ -278,8 +278,8 @@ $ git browse schacon/ticgit commit/SHA
       全部内容以 <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/">Creative Commons 署名-非商业性使用-相同方式共享 3.0 协议发布</a>.
       <br />
         &copy; Copyright 2011, 蒋鑫。
-      最后更新于 2012/06/08。
-      使用 <a href="http://sphinx.pocoo.org/">Sphinx</a> 1.1.2 创建。
+      最后更新于 2013/10/14。
+      使用 <a href="http://sphinx.pocoo.org/">Sphinx</a> 1.1.3 创建。
 
     </div>
   </body>
